--- a/src/styles/components/Banner/banner.scss
+++ b/src/styles/components/Banner/banner.scss
@@ -2,35 +2,59 @@
   width: 100%;
   height: 223px;
   border-radius: 25px;
-  overflow: hidden;
-  position: relative;
-  margin-bottom: 30px;
+  margin: 0px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: brightness(70%);
+  background-image: url("/src/assets/Image_home.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  position: relative;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+  &::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 25px;
+    z-index: 1;
   }
 
-  &__text {
-    position: absolute;
+  &__title {
+    position: relative;
     color: white;
-    font-size: 2rem;
-    font-weight: 500;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    font-weight: 700;
+    z-index: 2;
+    max-width: 90%;
+    line-height: 1.3;
+    padding-inline: 1rem;
+    font-size: clamp(1.5rem, 4vw, 3rem); // s'adapte automatiquement
     text-align: center;
-    padding: 0 20px;
+    margin: 0 auto;
+  }
+
+  @media (max-width: 1024px) {
+    height: 170px;
   }
 
   @media (max-width: 768px) {
     height: 111px;
     border-radius: 10px;
+    justify-content: flex-start;
 
-    &__text {
-      font-size: 1.2rem;
+    &::before {
+      border-radius: 10px;
+    }
+
+    &__title {
+      text-align: left;
+      margin: 0;
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 }
