--- a/src/styles/components/CardList/cardlist.scss
+++ b/src/styles/components/CardList/cardlist.scss
@@ -2,15 +2,18 @@
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
-  justify-content: space-between;
-  padding: 20px;
+  padding: 40px 35px;
   background-color: #f6f6f6;
   border-radius: 25px;
+  box-sizing: border-box;
+  width: 100%;
+ 
 
   @media (max-width: 768px) {
     flex-direction: column;
     gap: 20px;
-    padding: 10px;
+    padding: 0;
     background-color: transparent;
+    align-items: center;
   }
 }
