--- a/src/styles/components/Footer/footer.scss
+++ b/src/styles/components/Footer/footer.scss
@@ -1,9 +1,8 @@
 .footer {
   background-color: black;
   color: white;
-  padding: 30px 0;
+  padding: 60px 0 20px 0;
   text-align: center;
-  margin-top: 40px;
 
   &__logo {
     margin-bottom: 15px;
@@ -14,14 +13,15 @@
   }
 
   &__text {
-    font-size: 0.8rem;
+    font-size: 24px;
+    font-weight: 500;
   }
 
   @media (max-width: 768px) {
     padding: 20px 0;
 
     &__text {
-      font-size: 0.7rem;
+      font-size: 12px;
     }
   }
 }
