--- a/src/styles/pages/Home/home.scss
+++ b/src/styles/pages/Home/home.scss
@@ -1,7 +1,11 @@
 .home {
-  padding: 0 50px;
+  padding: 45px 100px;
+  display: flex;
+  flex-direction: column;
+  gap:50px;
 
   @media (max-width: 768px) {
-    padding: 0 20px;
+    padding: 20px 20px;
+    gap:27px;
   }
 }
