--- a/src/styles/components/Card/card.scss
+++ b/src/styles/components/Card/card.scss
@@ -1,4 +1,4 @@
-@import '../../variables/variables.scss';
+@import '../../variables_et_mixins/variables_et_mixins.scss';
 .card {
   color:$secondary-color;
   border-radius: 10px;
