--- a/src/styles/components/Header/header.scss
+++ b/src/styles/components/Header/header.scss
@@ -1,4 +1,4 @@
-@import '../../variables/variables.scss';
+@import '../../variables_et_mixins/variables_et_mixins.scss';
 
 .header {
   display: flex;
