--- a/src/styles/components/AccommodationHeader/accommodationheader.scss
+++ b/src/styles/components/AccommodationHeader/accommodationheader.scss
@@ -1,75 +1,94 @@
+@import '../../variables_et_mixins/variables_et_mixins.scss';
+
 .accommodation-header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 30px;
-  color: #ff6060;
+  color: $primary-color;
 
-  &__info {
+  // Partie gauche
+  &__left {
     max-width: 70%;
-
-    &__title {
-      font-size: 24px;
-      font-weight: 500;
-    }
-
-    &__location {
-      margin-top: 5px;
-      color: #000;
-      font-size: 16px;
-    }
-
-    &__tags {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 10px;
-    }
-
-    &__tag {
-      background-color: #ff6060;
-      color: white;
-      padding: 5px 10px;
-      border-radius: 10px;
-      font-size: 14px;
-    }
+    margin-top:30px;
   }
 
-  &__host-rating {
+  &__title {
+    font-size: 36px;
+    font-weight: 500;
+    margin: 0;
+  }
+
+  &__location {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    color: $secondary-color;
+    gap: 10px;
+    margin-top: 5px;
+  }
+
+  &__tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 10px 0px;
+  }
+
+  &__tag {
+    background-color: $primary-color;
+    color: $third-color;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 700;
+  }
+ 
+  //  Partie droite (rating + badge)
+  &__right {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    justify-content: space-between;
+    margin-top: 20px;
   }
 
-  &__host {
+  &__badge-container {
     display: flex;
+    flex-direction: row;
     align-items: center;
     gap: 10px;
-    text-align: right;
+  }
 
-    p {
-      font-size: 14px;
-    }
+  &__badge-label {
+    font-size: 14px;
+    color: $primary-color;
+    font-weight: 500;
+    text-align: center;
+  }
 
-    img {
-      width: 64px;
-      height: 64px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
+  &__location-badge {
+    background-color: #c4c4c4;
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 13px;
+    color:$third-color;
+    font-weight: 500;
+    flex-shrink: 0;
   }
 
   &__rating {
     display: flex;
     gap: 5px;
-    font-size: 20px;
+    font-size: 36px;
 
     .star {
       color: #e3e3e3;
 
       &.active {
-        color: #ff6060;
+        color: $primary-color;
       }
     }
   }
@@ -77,16 +96,22 @@
   @media (max-width: 768px) {
     flex-direction: column;
 
-    &__info {
+    &__left {
       max-width: 100%;
     }
 
-    &__host-rating {
-      flex-direction: row-reverse;
-      align-items: center;
+    &__right {
+      flex-direction: row;
       justify-content: space-between;
+      align-items: center;
       width: 100%;
       margin-top: 20px;
+    }
+
+    &__badge-container {
+      flex-direction: row;
+      justify-content: flex-end;
+      order: 2;
     }
   }
 }
