--- a/src/styles/components/Banner/banner.scss
+++ b/src/styles/components/Banner/banner.scss
@@ -1,4 +1,5 @@
 .banner {
+  margin-bottom: 50px;
   width: 100%;
   height: 223px;
   border-radius: 25px;
@@ -42,6 +43,7 @@
   }
 
   @media (max-width: 768px) {
+    margin-bottom: 27px;
     height: 111px;
     border-radius: 10px;
     justify-content: flex-start;
