--- a/src/styles/components/Collapse/collapse.scss
+++ b/src/styles/components/Collapse/collapse.scss
@@ -1,53 +1,73 @@
+@import '../../variables_et_mixins/variables_et_mixins.scss';
+.accommodation__collapses {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  margin-top: 15px;
 .collapse {
-    background-color: #f7f7f7;
-    border-radius: 10px;
-    overflow: hidden;
-    margin-bottom: 20px;
-    font-family: 'Montserrat', sans-serif;
-  
-    &__header {
-      background-color: #ff6060;
-      color: white;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 20px;
-      cursor: pointer;
-      font-weight: 500;
-      font-size: 16px;
-      border-radius: 5px;
-      transition: background-color 0.3s;
-  
-      h3 {
-        margin: 0;
-      }
-  
-      span {
-        font-size: 18px;
-      }
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 20px;
+  width: 50%;
+  background-color: $third-color;
+
+  &__header {
+    background-color: $primary-color;
+    color: $third-color;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+
+    h3 {
+      margin: 0;
     }
-  
-    &__content {
-      padding: 15px 20px;
-      background-color: white;
-      font-size: 14px;
-      line-height: 1.4;
-      animation: open 0.3s ease-in-out;
-  
-      p {
-        margin: 5px 0;
-      }
+
+    img {
+      width: 24px;
+      height: 13.71px;
+      transition: transform 0.3s ease;
     }
   }
-  
-  @keyframes open {
-    from {
-      opacity: 0;
-      transform: translateY(-10px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
+
+  &__icon.open {
+    transform: rotate(-180deg); // animation douce
+  }
+
+  &__content {
+    padding: 15px 20px;
+    background-color: #f7f7f7f7;
+    font-size: 18px;
+    line-height: 1.4;
+    animation: open 0.3s ease-in-out;
+
+    p {
+      margin: 5px 0;
     }
   }
-  
+}
+}
+@keyframes open {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@media (max-width: 768px) {
+.accommodation__collapses {
+  flex-direction: column;
+  .collapse {
+    width: 100%;
+  }
+}
+}
