--- a/src/styles/components/Footer/footer.scss
+++ b/src/styles/components/Footer/footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  margin-top: 5px;
   background-color: black;
   color: white;
   padding: 60px 0 20px 0;
@@ -19,6 +20,7 @@
 
   @media (max-width: 768px) {
     padding: 20px 0;
+    margin-top: 7px;
 
     &__text {
       font-size: 12px;
