--- a/src/styles/components/Header/header.scss
+++ b/src/styles/components/Header/header.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: $main-font;
+  margin-bottom: 50px;
 
   &__logo {
     height: 68px;
@@ -35,7 +35,7 @@
   }
 
   @media screen and (max-width: 768px) {
-
+    margin-bottom: 27px;
     &__logo--mobile {
       display: block;
       height: 46px;
