--- a/src/styles/variables_et_mixins/variables_et_mixins.scss
+++ b/src/styles/variables_et_mixins/variables_et_mixins.scss
@@ -13,3 +13,53 @@ $main-font: 'Montserrat', sans-serif;
     }
   }
 
+  @mixin collapse{
+    .collapse {
+      border-radius: 10px;
+      overflow: hidden;
+      margin-bottom: 20px;
+      width: 50%;
+      background-color: $third-color;
+    
+      &__header {
+        background-color: $primary-color;
+        color: $third-color;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px 20px;
+        cursor: pointer;
+        font-weight: 500;
+        font-size: 16px;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+    
+        h3 {
+          margin: 0;
+        }
+    
+        img {
+          width: 24px;
+          height: 13.71px;
+          transition: transform 0.3s ease;
+        }
+      }
+    
+      &__icon.open {
+        transform: rotate(-180deg); // animation douce
+      }
+    
+      &__content {
+        padding: 15px 20px;
+        background-color: #f7f7f7f7;
+        font-size: 18px;
+        line-height: 1.4;
+        animation: open 0.3s ease-in-out;
+    
+        p {
+          margin: 5px 0;
+        }
+      }
+    }
+  }
+
