--- a/src/styles/components/Banner/banner.scss
+++ b/src/styles/components/Banner/banner.scss
@@ -37,7 +37,10 @@
     text-align: center;
     margin: 0 auto;
   }
-
+  .mobile-break {
+    display: none;
+  }
+  
   @media (max-width: 1024px) {
     height: 170px;
   }
@@ -55,8 +58,13 @@
     &__title {
       text-align: left;
       margin: 0;
-      padding-left: 20px;
-      padding-right: 20px;
+      padding-left: 15px;
+      width: 70%;
+
+    .mobile-break{
+      display: inline;
+    }
+      
     }
   }
 }
