--- a/src/styles/components/CardList/cardlist.scss
+++ b/src/styles/components/CardList/cardlist.scss
@@ -7,9 +7,11 @@
   border-radius: 25px;
   box-sizing: border-box;
   width: 100%;
+  margin-top: 50px;
  
 
   @media (max-width: 768px) {
+    margin-top: 35px;
     flex-direction: column;
     gap: 20px;
     padding: 0;
