--- a/src/styles/pages/NotFound/notfound.scss
+++ b/src/styles/pages/NotFound/notfound.scss
@@ -23,11 +23,14 @@
     color: $secondary-color;
     font-size: 18px;
     font-weight: 500;
-    margin-top: 20px;
     display: inline-block;
     border-bottom: 1px solid $secondary-color;
     text-decoration: none;
-    padding-bottom: 2px;
+  
+    /* ajustements visuels */
+    line-height: 1; // réduit l'espace vertical
+    padding-bottom: 0; // colle au plus près la ligne
+    margin-top: 10px; // laisse un peu d’espace avec l’élément du dessus
   }
   
   
