--- a/src/styles/components/Footer/footer.scss
+++ b/src/styles/components/Footer/footer.scss
@@ -22,7 +22,9 @@
   }
 
   @media (max-width: 768px) {
-   .footer{ padding: 20px 0px;
+    padding: 60px 0px;
+    margin-top: 10px;
+
    
     &__logo {
       margin-bottom: 0px;}
@@ -35,4 +37,4 @@
     }
   }
 }
-}
+
