--- a/src/styles/main/main.scss
+++ b/src/styles/main/main.scss
@@ -9,6 +9,6 @@ body {
   }
   
   main {
-    flex: 1; // très important pour que le contenu pousse le footer
+    flex: 1; //pour que le contenu pousse le footer
   }
   
