--- a/src/styles/components/Banner/banner.scss
+++ b/src/styles/components/Banner/banner.scss
@@ -1,29 +1,32 @@
 .banner {
-  margin-bottom: 50px;
+  position: relative;
   width: 100%;
   height: 223px;
   border-radius: 25px;
-  margin: 0px auto;
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-
-  position: relative;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-
-  &::before {
-    content: "";
+  &__bg {
     position: absolute;
     inset: 0;
-    background-color: rgba(0, 0, 0, var(--overlay-opacity, 0.6)); // 👈 valeur par défaut à 0.6
-    border-radius: 25px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: 0;
+  }
+
+  &__overlay {
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.6); // valeur par défaut
     z-index: 1;
   }
 
+  &--about .banner__overlay {
+    background-color: rgba(0, 0, 0, 0.3); // plus clair pour About
+  }
 
   &__title {
     position: relative;
@@ -33,27 +36,23 @@
     max-width: 90%;
     line-height: 1.3;
     padding-inline: 1rem;
-    font-size: clamp(1.5rem, 4vw, 3rem); // s'adapte automatiquement
+    font-size: clamp(1.5rem, 4vw, 3rem);
     text-align: center;
     margin: 0 auto;
   }
+
   .mobile-break {
     display: none;
   }
-  
+
   @media (max-width: 1024px) {
     height: 170px;
   }
 
   @media (max-width: 768px) {
-    margin-bottom: 27px;
     height: 111px;
     border-radius: 10px;
     justify-content: flex-start;
-
-    &::before {
-      border-radius: 10px;
-    }
 
     &__title {
       text-align: left;
@@ -61,10 +60,9 @@
       padding-left: 15px;
       width: 70%;
 
-    .mobile-break{
-      display: inline;
-    }
-      
+      .mobile-break {
+        display: inline;
+      }
     }
   }
 }
