--- a/src/styles/components/Card/card.scss
+++ b/src/styles/components/Card/card.scss
@@ -8,7 +8,7 @@
   position: relative;
   cursor: pointer;
 
-  &__image {
+  &__img {
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -22,7 +22,7 @@
     padding: 15px 0 0 15px;
     font-size: 18px;
     font-weight: 700;
-    color: blue;
+    color:$third-color;
     width: 40%;
   }
   @media (max-width: 1024px) {
