--- a/src/styles/components/Gallery/gallery.scss
+++ b/src/styles/components/Gallery/gallery.scss
@@ -42,7 +42,7 @@
     }
   }
   
-  @media screen and (max-width: 768px) {
+  @media (max-width: 768px) {
     .gallery__counter {
       display: none;
     }
