--- a/src/styles/components/AccommodationHeader/accommodationheader.scss
+++ b/src/styles/components/AccommodationHeader/accommodationheader.scss
@@ -9,7 +9,7 @@
   // Partie gauche
   &__left {
     max-width: 70%;
-    margin-top:30px;
+    margin-top:40px;
   }
 
   &__title {
@@ -29,81 +29,93 @@
 
   &__tags {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
     gap: 10px;
     margin: 10px 0;
     width: 80%;
   }
  
-  //  Partie droite (rating + badge)
+  //  Partie droite (rating + host)
   &__right {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    gap: 20px;
     margin-top: 20px;
   }
 
-  &__badge-container {
+  &__host {
     display: flex;
-    flex-direction: row;
     align-items: center;
     gap: 10px;
-  }
+    text-align: right;
 
-  &__badge-label {
-    font-size: 14px;
-    color: $primary-color;
-    font-weight: 500;
-    text-align: center;
-  }
+    p {
+      font-size: 18px;
+      width: 50%;
+    }
 
-  &__location-badge {
-    background-color: #c4c4c4;
-    border-radius: 50%;
-    width: 64px;
-    height: 64px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 13px;
-    color:$third-color;
-    font-weight: 500;
-    flex-shrink: 0;
+    img {
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      object-fit: cover;
+      object-position: center;
+    }
   }
 
   &__rating {
     display: flex;
-    gap: 5px;
-    font-size: 36px;
-
-    .star {
-      color: #e3e3e3;
-
-      &.active {
-        color: $primary-color;
-      }
+    gap: 15px;
+  
+    .rating-star {
+      width: 24.75px;
+      height: 24px;
     }
   }
-
+  
   @media (max-width: 768px) {
     flex-direction: column;
-
     &__left {
-      max-width: 100%;
-    }
-
+      width: 100%;
+      margin-top: 10px;}
+      &__title {
+        font-size: 18px;
+        margin-bottom: 15px;
+      }
+      &__location {
+        font-size: 14px;
+      }
+    
     &__right {
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
       width: 100%;
-      margin-top: 20px;
+      margin-top: 0;
     }
 
-    &__badge-container {
+    &__host  {
       flex-direction: row;
       justify-content: flex-end;
       order: 2;
+    
+        p {
+          font-size: 12px;
+        }
+        img {
+          width: 40px;
+          height: 40px;
+        }
+    }
+    &__rating {
+      gap: 8px;
+    
+      .rating-star {
+        width: 13.41px;
+        height: 13px;
+      }
     }
   }
+
 }
