--- a/src/styles/variables_et_mixins/variables_et_mixins.scss
+++ b/src/styles/variables_et_mixins/variables_et_mixins.scss
@@ -16,55 +16,73 @@ $main-font: 'Montserrat', sans-serif;
     padding: 20px;
   }
 }
+@mixin collapse {
+  .collapse {
+    overflow: hidden;
+    margin-bottom: 20px;
+    width: 100%;
+    background-color: $third-color;
+  
+    
 
-
-  @mixin collapse{
-    .collapse {
+    &__header {
       border-radius: 10px;
+      position: relative;
+      z-index: 2;
+      background-color: $primary-color;
+      color: $third-color;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 20px;
+      cursor: pointer;
+      font-weight: 500;
+      font-size: 16px;
+      position: relative;
+      z-index: 2;
+      -webkit-tap-highlight-color: transparent;
+
+
+      h3 {
+        margin: 0;
+      }
+
+      img {
+        width: 24px;
+        height: 13.71px;
+        transition: transform 0.3s ease;
+      }
+    }
+
+
+    &__icon.open {
+      transform: rotate(-180deg);
+    }
+
+    &__content {
+      max-height: 0;
       overflow: hidden;
-      margin-bottom: 20px;
-      width: 50%;
-      background-color: $third-color;
-    
-      &__header {
-        background-color: $primary-color;
-        color: $third-color;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px 20px;
-        cursor: pointer;
-        font-weight: 500;
-        font-size: 16px;
-        border-radius: 5px;
-        transition: background-color 0.3s;
-    
-        h3 {
-          margin: 0;
-        }
-    
-        img {
-          width: 24px;
-          height: 13.71px;
-          transition: transform 0.3s ease;
-        }
+      opacity: 0;
+      padding: 0 20px;
+      background-color: #fafafa;
+      font-size: 18px;
+      line-height: 1.4;
+      transition: max-height 0.4s ease, opacity 0.3s ease, padding 0.3s ease;
+      border-radius: 0 0 10px 10px;
+      position: relative;
+      top: -5px;
+      z-index: 1; 
+
+
+      p {
+        margin: 5px 0;
       }
-    
-      &__icon.open {
-        transform: rotate(-180deg); 
-      }
-    
-      &__content {
+
+      &.open {
+        max-height: 500px;
+        opacity: 1;
         padding: 15px 20px;
-        background-color: #f7f7f7f7;
-        font-size: 18px;
-        line-height: 1.4;
-        animation: open 0.3s ease-in-out;
-    
-        p {
-          margin: 5px 0;
-        }
       }
     }
   }
-
+}
