--- a/src/styles/components/AccommodationHeader/accommodationheader.scss
+++ b/src/styles/components/AccommodationHeader/accommodationheader.scss
@@ -8,7 +8,7 @@
 
   // Partie gauche
   &__left {
-    max-width: 70%;
+    width: 70%;
     margin-top:40px;
   }
 
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     font-size: 18px;
+    font-weight: 500;
     color: $secondary-color;
     gap: 10px;
     margin-top: 5px;
@@ -32,7 +33,6 @@
     flex-wrap: wrap;
     gap: 10px;
     margin: 10px 0;
-    width: 80%;
   }
  
   //  Partie droite (rating + host)
