--- a/src/styles/components/Header/header.scss
+++ b/src/styles/components/Header/header.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 50px;
+  margin: 45px 100px 0 100px;
 
   &__logo {
     height: 68px;
@@ -43,9 +43,11 @@
       
     }
   }
-
-  @media screen and (max-width: 768px) {
-    margin-bottom: 30px;
+  @media (max-width:1024px){
+    margin: 45px 50px 0 50px;
+  }
+  @media (max-width: 768px) {
+    margin: 20px 20px 0 20px;
     &__logo--mobile {
       display: block;
       height: 46px;
