--- a/src/styles/variables_et_mixins/variables_et_mixins.scss
+++ b/src/styles/variables_et_mixins/variables_et_mixins.scss
@@ -13,7 +13,7 @@ $main-font: 'Montserrat', sans-serif;
     padding: 45px 50px;
   }
   @media (max-width: 768px) {
-    padding: 20px;
+    padding: 35px 20px 25px 20px;
   }
 }
 @mixin collapse {
