--- a/src/styles/components/Collapse/collapse_accommodation.scss
+++ b/src/styles/components/Collapse/collapse_accommodation.scss
@@ -1,10 +1,10 @@
-@import '../../variables_et_mixins/variables_et_mixins.scss';
+@import "../../variables_et_mixins/variables_et_mixins.scss";
 .accommodation__collapses {
   display: flex;
   justify-content: space-between;
   gap: 40px;
   margin-top: 15px;
-  @include collapse
+  @include collapse;
 }
 @keyframes open {
   from {
@@ -17,25 +17,23 @@
   }
 }
 
-
-
 @media (max-width: 768px) {
-.accommodation__collapses {
-  flex-direction: column;
-  gap:0;
+  .accommodation__collapses {
+    flex-direction: column;
+    gap: 0;
 
-  .collapse {
-    width: 100%;
-    .collapse__header{
-      font-size: 14px;
-      .collapse__icon{
-        width: 16px;
-        height: 9.14px;
+    .collapse {
+      width: 100%;
+      .collapse__header {
+        font-size: 14px;
+        .collapse__icon {
+          width: 16px;
+          height: 9.14px;
+        }
+      }
+      .collapse__content {
+        font-size: 12px;
       }
     }
-  .collapse__content{
-    font-size: 12px;
   }
-  }
-}
 }
