--- a/src/styles/components/Header/header.scss
+++ b/src/styles/components/Header/header.scss
@@ -1,4 +1,4 @@
-@import '../../variables_et_mixins/variables_et_mixins.scss';
+@import "../../variables_et_mixins/variables_et_mixins.scss";
 
 .header {
   display: flex;
@@ -29,21 +29,20 @@
 
       &.active {
         position: relative;
-      
+
         &::after {
-          content: '';
+          content: "";
           position: absolute;
           left: 0;
-          bottom: 1px; 
+          bottom: 1px;
           width: 100%;
           height: 0.5px;
           background-color: $secondary-color;
         }
       }
-      
     }
   }
-  @media (max-width:1024px){
+  @media (max-width: 1024px) {
     margin: 45px 50px 0 50px;
   }
   @media (max-width: 768px) {
